--- a/index.html
+++ b/index.html
@@ -112,7 +112,36 @@
         <div class="small-tree column-6 row-14"></div>
         <div class="small-tree column-7 row-14"></div>
 
+        <div class="small-tree column-0 row-15"></div>
+        <div class="small-tree column-1 row-15"></div>
+        <div class="crate column-2 row-15"></div>
+        <div class="small-tree column-6 row-15"></div>
+        <div class="small-tree column-7 row-15"></div>
+        <div class="small-tree column-10 row-15"></div>
 
+        <div class="coin column-0 row-16"></div>
+        <div class="small-tree column-1 row-16"></div>
+        <div class="small-tree column-2 row-16"></div>
+        <div class="small-tree column-6 row-16"></div>
+        <div class="small-tree column-9 row-16"></div>
+        <div class="small-tree column-10 row-16"></div>
+
+        <div class="coin column-0 row-17"></div>
+        <div class="coin column-1 row-17"></div>
+        <div class="coin column-2 row-17"></div>
+        <div class="small-tree column-3 row-17"></div>
+        <div class="small-tree column-9 row-17"></div>
+        <div class="small-tree column-10 row-17"></div>
+
+        <div class="small-tree column-8 row-18"></div>
+        <div class="small-tree column-9 row-18"></div>
+        <div class="small-tree column-10 row-18"></div>
+
+        <div class="small-tree column-0 row-19"></div>
+        <div class="small-tree column-1 row-19"></div>
+        <div class="small-tree column-8 row-19"></div>
+        <div class="small-tree column-9 row-19"></div>
+        <div class="small-tree column-10 row-19"></div>
       </div>
     </div>
   </div>
