--- a/index.html
+++ b/index.html
@@ -13,7 +13,32 @@
 <body>
   <div class="all">
     <div class="wrapper">
-      <div class="screen">
+      <div class="hud-wrapper">
+        <div class="up">
+          <div class="score">
+            <span>451</span>
+          </div>
+        </div>
+        <div class="down">
+          <nav class="hud">
+            <div class="health">
+              <span class="text-outline">60/80</span>
+              <div class="health-bar-wrapper">
+                <div class="health-bar" health="75%"></div>
+              </div>
+            </div>
+            <div class="home"></div>
+            <div class="stats"></div>
+            <div class="inventory"></div>
+            <div class="settings"></div>
+            <div class="xp">
+              <div class="xp-bar"></div>
+            </div>
+          </nav>
+        </div>
+
+      </div>
+      <div class="game">
         <div class="slime column-0 row-0"></div>
         <div class="slime column-2 row-0"></div>
         <div class="fence column-5 row-0"></div>
@@ -51,6 +76,7 @@
         <div class="slime column-6 row-4"></div>
         <div class="coin column-8 row-4"></div>
         <div class="coin column-9 row-4"></div>
+        <div class="coin column-10 row-4"></div>
 
         <div class="ghost column-3 row-6"></div>
         <div class="wall column-7 row-6"></div>
