--- a/index.html
+++ b/index.html
@@ -89,31 +89,31 @@
         <div class="coin column-9 row-7"></div>
         <div class="chest column-10 row-7"></div>
 
-        <div class="small-tree column-0 row-8"></div>
-        <div class="small-tree column-1 row-8"></div>
-        <div class="small-tree column-2 row-8"></div>
-        <div class="small-tree column-3 row-8"></div>
+        <div class="tree column-0 row-8"></div>
+        <div class="tree column-1 row-8"></div>
+        <div class="tree column-2 row-8"></div>
+        <div class="tree column-3 row-8"></div>
         <div class="wall column-7 row-8"></div>
         <div class="coin column-8 row-8"></div>
         <div class="coin column-9 row-8"></div>
         <div class="coin column-10 row-8"></div>
 
         <div class="crate column-2 row-9"></div>
-        <div class="small-tree column-6 row-9"></div>
+        <div class="tree column-6 row-9"></div>
         <div class="wall column-7 row-9"></div>
         <div class="stone-doors column-8 row-9"></div>
         <div class="wall column-9 row-9"></div>
         <div class="wall column-10 row-9"></div>
 
         <div class="coin column-0 row-10"></div>
-        <div class="small-tree column-6 row-10"></div>
+        <div class="tree column-6 row-10"></div>
         <div class="crate column-9 row-10"></div>
         <div class="crate column-10 row-10"></div>
 
         <div class="coin column-0 row-11"></div>
-        <div class="small-tree column-1 row-11"></div>
-        <div class="small-tree column-2 row-11"></div>
-        <div class="small-tree column-3 row-11"></div>
+        <div class="tree column-1 row-11"></div>
+        <div class="tree column-2 row-11"></div>
+        <div class="tree column-3 row-11"></div>
         <div class="player column-7 row-11"></div>
         <div class="skeleton column-8 row-11"></div>
 
@@ -121,53 +121,53 @@
         <div class="fence column-1 row-12"></div>
         <div class="fence column-2 row-12"></div>
         <div class="skeleton column-4 row-12"></div>
-        <div class="small-tree column-8 row-12"></div>
-        <div class="small-tree column-9 row-12"></div>
+        <div class="tree column-8 row-12"></div>
+        <div class="tree column-9 row-12"></div>
 
         <div class="health-potion column-0 row-13"></div>
         <div class="coin column-1 row-13"></div>
         <div class="door column-2 row-13"></div>
-        <div class="small-tree column-4 row-13"></div>
-        <div class="small-tree column-7 row-13"></div>
-        <div class="small-tree column-9 row-13"></div>
+        <div class="tree column-4 row-13"></div>
+        <div class="tree column-7 row-13"></div>
+        <div class="tree column-9 row-13"></div>
 
         <div class="fence column-0 row-14"></div>
         <div class="fence column-1 row-14"></div>
         <div class="fence column-2 row-14"></div>
-        <div class="small-tree column-4 row-14"></div>
-        <div class="small-tree column-6 row-14"></div>
-        <div class="small-tree column-7 row-14"></div>
+        <div class="tree column-4 row-14"></div>
+        <div class="tree column-6 row-14"></div>
+        <div class="tree column-7 row-14"></div>
 
-        <div class="small-tree column-0 row-15"></div>
-        <div class="small-tree column-1 row-15"></div>
+        <div class="tree column-0 row-15"></div>
+        <div class="tree column-1 row-15"></div>
         <div class="crate column-2 row-15"></div>
-        <div class="small-tree column-6 row-15"></div>
-        <div class="small-tree column-7 row-15"></div>
-        <div class="small-tree column-10 row-15"></div>
+        <div class="tree column-6 row-15"></div>
+        <div class="tree column-7 row-15"></div>
+        <div class="tree column-10 row-15"></div>
 
         <div class="coin column-0 row-16"></div>
-        <div class="small-tree column-1 row-16"></div>
-        <div class="small-tree column-2 row-16"></div>
-        <div class="small-tree column-6 row-16"></div>
-        <div class="small-tree column-9 row-16"></div>
-        <div class="small-tree column-10 row-16"></div>
+        <div class="tree column-1 row-16"></div>
+        <div class="tree column-2 row-16"></div>
+        <div class="tree column-6 row-16"></div>
+        <div class="tree column-9 row-16"></div>
+        <div class="tree column-10 row-16"></div>
 
         <div class="coin column-0 row-17"></div>
         <div class="coin column-1 row-17"></div>
         <div class="coin column-2 row-17"></div>
-        <div class="small-tree column-3 row-17"></div>
-        <div class="small-tree column-9 row-17"></div>
-        <div class="small-tree column-10 row-17"></div>
+        <div class="tree column-3 row-17"></div>
+        <div class="tree column-9 row-17"></div>
+        <div class="tree column-10 row-17"></div>
 
-        <div class="small-tree column-8 row-18"></div>
-        <div class="small-tree column-9 row-18"></div>
-        <div class="small-tree column-10 row-18"></div>
+        <div class="tree column-8 row-18"></div>
+        <div class="tree column-9 row-18"></div>
+        <div class="tree column-10 row-18"></div>
 
-        <div class="small-tree column-0 row-19"></div>
-        <div class="small-tree column-1 row-19"></div>
-        <div class="small-tree column-8 row-19"></div>
-        <div class="small-tree column-9 row-19"></div>
-        <div class="small-tree column-10 row-19"></div>
+        <div class="tree column-0 row-19"></div>
+        <div class="tree column-1 row-19"></div>
+        <div class="tree column-8 row-19"></div>
+        <div class="tree column-9 row-19"></div>
+        <div class="tree column-10 row-19"></div>
       </div>
     </div>
   </div>
