--- a/ukázka/index.html
+++ b/ukázka/index.html
@@ -22,9 +22,9 @@
         <div class="down">
           <nav class="hud">
             <div class="health">
-              <span class="text-outline">60/80</span>
+              <span>60/80</span>
               <div class="health-bar-wrapper">
-                <div class="health-bar" health="75%"></div>
+                <div class="health-bar" style="width:75%"></div>
               </div>
             </div>
             <div class="home"></div>
